--- a/1-2/1-2.vcxproj
+++ b/1-2/1-2.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="1-2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TreeSet_AVL.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
