--- a/proyecto/1-2/1-2.vcxproj
+++ b/proyecto/1-2/1-2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{0654fe83-c741-4113-a6ac-4e66ce8a2800}</ProjectGuid>
-    <RootNamespace>My23</RootNamespace>
+    <ProjectGuid>{5DE81BEC-6E36-49C4-B7E8-F1DBE3BD9739}</ProjectGuid>
+    <RootNamespace>My12</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,7 +123,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2-3.cpp" />
+    <ClCompile Include="1-2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TreeSet_AVL.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
